--- a/cv-traducteur/index.html
+++ b/cv-traducteur/index.html
@@ -42,9 +42,9 @@
                   </ul>
                </div>
                <div class="intro-info-main">Телефон:</div>
-               <div class="intro-info-text">(+380)99 430 20 93 <br> (+380)73 445 86 67(Viber)</div>
+               <div class="intro-info-text"><a href="tel:+380994302093">(+380)99 430 20 93</a>  <br> <a href="tel:+380734458667">(+380)73 445 86 67(Viber)</a> </div>
                <div class="intro-info-main">Email:</div>
-               <div class="intro-info-text">taranenko.mykhailo@gmail.com</div>
+               <div class="intro-info-text"><a href="mailto:taranenko.mykhailo@gmail.com">taranenko.mykhailo@gmail.com</a> </div>
                <div class="intro-info-main">Соц. мережі:</div>
                <div class="link-images"><a href="https://www.linkedin.com/" target="_blank"><img  id="link-linkedin" src="images/linkedin.png" alt="linkedin"></a> <a href="https://twitter.com/Mike67553859" target="_blank"><img id="link-twitter" src="images/twitter.png" alt="twitter"></a>
                </div>
