update og meta tag

--- a/cv-traducteur/index.html
+++ b/cv-traducteur/index.html
@@ -2,8 +2,14 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
+      <meta property="og:title" content="Перекладач французскої"/>
+      <meta property="og:type" content="article" />
+      <meta property="og:url" content="https://miktar.github.io/cv-traducteur/" />
+      <meta property="og:image" content="images/france.png"/>
+      <meta property="og:description" content="Послуги перекладача французскої, 10 років живу у Франції"/>
       <title>Перекладач французскої</title>
       <link href="styles/index.css" rel="stylesheet" type="text/css">
+      <link rel="icon" href="images/france.png">
    </head>
    <body>
       <div class="container">
