update og meta tags

--- a/cv-traducteur/html/contact-fr.html
+++ b/cv-traducteur/html/contact-fr.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <meta charset="UTF-8">
+       <meta charset="utf-8">
+      <meta property="og:title" content="Traducteur français"/>
+      <meta property="og:type" content="article" />
+      <meta property="og:url" content="https://miktar.github.io/cv-traducteur/" />
+      <meta property="og:image" content="images/france.png"/>
+      <meta property="og:description" content="Traducteur français, 10 ans d'experience"/>
       <title>Contacts</title>
       <link href="../styles/index.css" rel="stylesheet" type="text/css">
+      <link rel="icon" href="../images/france.png">
    </head>
    <body>
       <div class="container-contact">
@@ -27,14 +33,14 @@
             <div class="contact-info">
                <div>Contacts</div>
                <div>Mykhailo Taranenko</div>
-               <div>Kherson</div>
+               <div>Kherson, prêt à déménager à Kiev, Odessa, Dnipro, Zaporijia</div>
                <div><span class="contact-info-color">Email: </span> <a href="mailto:taranenko.mykhailo@gmail.com">taranenko.mykhailo@gmail.com</a> </div>
                <div><span class="contact-info-color">Tel: </span> <a href="tel:+380994302093">(+380)99 430 20 93</a>  <br> <a href="tel:+380734458667">(+380)73 445 86 67(Viber)</a> </div>
                <div><a href="https://www.linkedin.com/" target="_blank"><img  id="link-linkedin" src="../images/linkedin.png" alt="linkedin"></a> <a href="https://twitter.com/Mike67553859" target="_blank"><img id="link-twitter" src="../images/twitter.png" alt="twitter"></a></div>
             </div>
             <div class="contact-form">
                <div>Me contacter:</div>
-               <form action="https://formspree.io/f/xyybbvww" method="post">
+               <form action="" method="post">
                   <label for="name-contact"></label>
                   <input type="text"   id="name-contact" name = 'name-contact'  maxlength="50" value="" placeholder="Entrez votre nom/prénom:" required> <br><br>
                   <label for="contact"></label>
