--- a/cv-traducteur/html/index-fr.html
+++ b/cv-traducteur/html/index-fr.html
@@ -2,8 +2,14 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
+      <meta property="og:title" content="Traducteur français"/>
+      <meta property="og:type" content="article" />
+      <meta property="og:url" content="https://miktar.github.io/cv-traducteur/" />
+      <meta property="og:image" content="images/france.png"/>
+      <meta property="og:description" content="Traducteur français, 10 ans d'experience"/>
       <title>Traducteur français</title>
       <link href="../styles/index.css" rel="stylesheet" type="text/css">
+      <link rel="icon" href="../images/france.png">
    </head>
    <body>
       <div class="container">
