--- a/cv-traducteur/html/contact-rus.html
+++ b/cv-traducteur/html/contact-rus.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <meta charset="UTF-8">
+      <meta charset="utf-8">
+      <meta property="og:title" content="Переводчик французского"/>
+      <meta property="og:type" content="article" />
+      <meta property="og:url" content="https://miktar.github.io/cv-traducteur/" />
+      <meta property="og:image" content="images/france.png"/>
+      <meta property="og:description" content="Услуги переводчика французского языка, 10 лет живу во Франции"/>
       <title>Контакты</title>
       <link href="../styles/index.css" rel="stylesheet" type="text/css">
+      <link rel="icon" href="../images/france.png">
    </head>
    <body>
       <div class="container-contact">
@@ -27,21 +33,21 @@
             <div class="contact-info">
                <div>Контакты</div>
                <div>Михаил Тараненко</div>
-               <div>Херсон</div>
+               <div>Херсон, готов к переезду в Киев, Одессу, Днепр, Запорожье</div>
                <div><span class="contact-info-color">Email: </span> <a href="mailto:taranenko.mykhailo@gmail.com">taranenko.mykhailo@gmail.com</a> </div>
                <div><span class="contact-info-color">Тел: </span> <a href="tel:+380994302093">(+380)99 430 20 93</a>  <br> <a href="tel:+380734458667">(+380)73 445 86 67(Viber)</a> </div>
                <div><a href="https://www.linkedin.com/" target="_blank"><img  id="link-linkedin" src="../images/linkedin.png" alt="linkedin"></a> <a href="https://twitter.com/Mike67553859" target="_blank"><img id="link-twitter" src="../images/twitter.png" alt="twitter"></a></div>
             </div>
             <div class="contact-form">
                <div>Напишите мне, буду рад сотрудничеству:</div>
-               <form action="https://formspree.io/f/xyybbvww" method="post">
+               <form action="" method="post">
                   <label for="name-contact"></label>
                   <input type="text"   id="name-contact" name = 'name-contact'  maxlength="50" value="" placeholder="Введите Ваше имя/фамилию" required> <br><br>
                   <label for="contact"></label>
                   <input type="text"  id="contact" name = 'mail-or-tel-contact'  maxlength="50" value="" placeholder="Введите ваш номер телефона и/или email" required> <br><br>
                   <label for="comment"></label>
                   <textarea  style="font-family: Arial,sans-serif " id="comment" name="comment" cols="15" rows="10" placeholder="Комментарий" required></textarea> <br><br>
-                  <input type="hidden" name="_language" value="ru" />
+                  <input type="hidden" name="_language" value="fr" />
                   <input id="submit" type="submit" name="submit" value="Отправить">
                </form>
             </div>
