--- a/cv-traducteur/html/index-rus.html
+++ b/cv-traducteur/html/index-rus.html
@@ -2,8 +2,14 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
+      <meta property="og:title" content="Переводчик французского"/>
+      <meta property="og:type" content="article" />
+      <meta property="og:url" content="https://miktar.github.io/cv-traducteur/" />
+      <meta property="og:image" content="images/france.png"/>
+      <meta property="og:description" content="Услуги переводчика французского языка, 10 лет живу во Франции"/>
       <title>Переводчик французского</title>
       <link href="../styles/index.css" rel="stylesheet" type="text/css">
+      <link rel="icon" href="../images/france.png">
    </head>
    <body>
       <div class="container">
