--- a/cv-traducteur/html/contact-fr.html
+++ b/cv-traducteur/html/contact-fr.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-       <meta charset="utf-8">
+      <meta charset="utf-8">
       <meta property="og:title" content="Traducteur français"/>
       <meta property="og:type" content="article" />
       <meta property="og:url" content="https://miktar.github.io/cv-traducteur/" />
       <meta property="og:image" content="images/france.png"/>
-      <meta property="og:description" content="Traducteur français, 10 ans d'experience"/>
+      <meta property="og:description" content="Traduction de textes de toute complexité"/>
+      <meta property="og:site_name" content="Traducteur français, 10 ans d'experience"/>
       <title>Contacts</title>
       <link href="../styles/index.css" rel="stylesheet" type="text/css">
       <link rel="icon" href="../images/france.png">
