--- a/cv-traducteur/html/index-fr.html
+++ b/cv-traducteur/html/index-fr.html
@@ -6,7 +6,9 @@
       <meta property="og:type" content="article" />
       <meta property="og:url" content="https://miktar.github.io/cv-traducteur/" />
       <meta property="og:image" content="images/france.png"/>
-      <meta property="og:description" content="Traducteur français, 10 ans d'experience"/>
+      <meta property="og:description" content="Traduction de textes de toute complexité"/>
+      <meta property="og:site_name" content="Traducteur français, 10 ans d'experience"/>
+
       <title>Traducteur français</title>
       <link href="../styles/index.css" rel="stylesheet" type="text/css">
       <link rel="icon" href="../images/france.png">
@@ -42,7 +44,7 @@
                <div class="intro-info-main">Secteur d'activité:</div>
                <div class="intro-info-text">
                   <ul>
-                     <li>Traduction de textes de toute complexité</li>
+                     <li></li>
                      <li>Traduction technique</li>
                      <li>Traduction juridique</li>
                      <li>Communication avec les clients (oral et par écrit)</li>
