--- a/cv-traducteur/html/contact.html
+++ b/cv-traducteur/html/contact.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <meta charset="utf-8">
+  <meta charset="utf-8">
       <meta property="og:title" content="Перекладач французскої"/>
       <meta property="og:type" content="article" />
       <meta property="og:url" content="https://miktar.github.io/cv-traducteur/" />
       <meta property="og:image" content="images/france.png"/>
-      <meta property="og:description" content="Послуги перекладача французскої, 10 років живу у Франції"/>
+      <meta property="og:description" content="Переклад текстів будь-якої складності"/>
+      <meta property="og:site_name" content="Послуги перекладача французскої, 10 років живу у Франції"/>
       <title>Контакти</title>
       <link href="../styles/index.css" rel="stylesheet" type="text/css">
       <link rel="icon" href="../images/france.png">
