--- a/cv-traducteur/html/index-rus.html
+++ b/cv-traducteur/html/index-rus.html
@@ -6,7 +6,8 @@
       <meta property="og:type" content="article" />
       <meta property="og:url" content="https://miktar.github.io/cv-traducteur/" />
       <meta property="og:image" content="images/france.png"/>
-      <meta property="og:description" content="Услуги переводчика французского языка, 10 лет живу во Франции"/>
+      <meta property="og:description" content="Перевод текстов любой сложности"/>
+      <meta property="og:site_name" content="Услуги переводчика французского языка, 10 лет живу во Франции"/>
       <title>Переводчик французского</title>
       <link href="../styles/index.css" rel="stylesheet" type="text/css">
       <link rel="icon" href="../images/france.png">
