--- a/cv-traducteur/index.html
+++ b/cv-traducteur/index.html
@@ -6,7 +6,8 @@
       <meta property="og:type" content="article" />
       <meta property="og:url" content="https://miktar.github.io/cv-traducteur/" />
       <meta property="og:image" content="images/france.png"/>
-      <meta property="og:description" content="Послуги перекладача французскої, 10 років живу у Франції"/>
+      <meta property="og:description" content="Переклад текстів будь-якої складності"/>
+      <meta property="og:site_name" content="Послуги перекладача французскої, 10 років живу у Франції"/>
       <title>Перекладач французскої</title>
       <link href="styles/index.css" rel="stylesheet" type="text/css">
       <link rel="icon" href="images/france.png">
