--- a/cv-traducteur/html/contact-rus.html
+++ b/cv-traducteur/html/contact-rus.html
@@ -5,7 +5,7 @@
       <meta property="og:title" content="Переводчик французского"/>
       <meta property="og:type" content="article" />
       <meta property="og:url" content="https://miktar.github.io/cv-traducteur/" />
-      <meta property="og:image" content="images/france.png"/>
+      <meta property="og:image" content="../images/france.png"/>
       <meta property="og:description" content="Перевод текстов любой сложности"/>
       <meta property="og:site_name" content="Услуги переводчика французского языка, 10 лет живу во Франции"/>
       <title>Контакты</title>
