--- a/cv-traducteur/html/index-fr.html
+++ b/cv-traducteur/html/index-fr.html
@@ -5,7 +5,7 @@
       <meta property="og:title" content="Traducteur français"/>
       <meta property="og:type" content="article" />
       <meta property="og:url" content="https://miktar.github.io/cv-traducteur/" />
-      <meta property="og:image" content="images/france.png"/>
+      <meta property="og:image" content="../images/france.png"/>
       <meta property="og:description" content="Traduction de textes de toute complexité"/>
       <meta property="og:site_name" content="Traducteur français, 10 ans d'experience"/>
 
