--- a/cv-traducteur/html/contact.html
+++ b/cv-traducteur/html/contact.html
@@ -5,7 +5,7 @@
       <meta property="og:title" content="Перекладач французскої"/>
       <meta property="og:type" content="article" />
       <meta property="og:url" content="https://miktar.github.io/cv-traducteur/" />
-      <meta property="og:image" content="../images/france.png"/>
+      <meta property="og:image" content="https://regnum.ru/uploads/pictures/news/2016/05/30/regnum_picture_1464609980585765_normal.jpg"/>
       <meta property="og:description" content="Переклад текстів будь-якої складності"/>
       <meta property="og:site_name" content="Послуги перекладача французскої, 10 років живу у Франції"/>
       <title>Контакти</title>
