--- a/cv-traducteur/html/contact-fr.html
+++ b/cv-traducteur/html/contact-fr.html
@@ -34,7 +34,7 @@
             <div class="contact-info">
                <div>Contacts</div>
                <div>Mykhailo Taranenko</div>
-               <div>Kherson, prêt à déménager à Kiev, Odessa, Dnipro, Zaporijia</div>
+               <div>Kherson, prêt à déménager à Kiev, <br>Odessa, Dnipro, Zaporijia</div>
                <div><span class="contact-info-color">Email: </span> <a href="mailto:taranenko.mykhailo@gmail.com">taranenko.mykhailo@gmail.com</a> </div>
                <div><span class="contact-info-color">Tel: </span> <a href="tel:+380994302093">(+380)99 430 20 93</a>  <br> <a href="tel:+380734458667">(+380)73 445 86 67(Viber)</a> </div>
                <div><a href="https://www.linkedin.com/" target="_blank"><img  id="link-linkedin" src="../images/linkedin.png" alt="linkedin"></a> <a href="https://twitter.com/Mike67553859" target="_blank"><img id="link-twitter" src="../images/twitter.png" alt="twitter"></a></div>
