--- a/cv-traducteur/html/contact-fr.html
+++ b/cv-traducteur/html/contact-fr.html
@@ -5,7 +5,7 @@
       <meta property="og:title" content="Traducteur français"/>
       <meta property="og:type" content="article" />
       <meta property="og:url" content="https://miktar.github.io/cv-traducteur/" />
-      <meta property="og:image" content="../images/france.png"/>
+      <meta property="og:image" content="https://miktar.github.io/cv-traducteur/html/contact.html"/>
       <meta property="og:description" content="Traduction de textes de toute complexité"/>
       <meta property="og:site_name" content="Traducteur français, 10 ans d'experience"/>
       <title>Contacts</title>
@@ -13,6 +13,7 @@
       <link rel="icon" href="../images/france.png">
    </head>
    <body>
+   <!-- <img src='images/france.png'/>-->
       <div class="container-contact">
          <div class="up-header">
             <ul>
