--- a/cv-traducteur/html/contact.html
+++ b/cv-traducteur/html/contact.html
@@ -13,6 +13,7 @@
       <link rel="icon" href="../images/france.png">
    </head>
    <body>
+   <!-- <img src='images/france.png'/>-->
       <div class="container-contact">
          <div class="up-header">
             <ul>
