--- a/cv-traducteur/html/index-rus.html
+++ b/cv-traducteur/html/index-rus.html
@@ -5,7 +5,7 @@
       <meta property="og:title" content="Переводчик французского"/>
       <meta property="og:type" content="article" />
       <meta property="og:url" content="https://miktar.github.io/cv-traducteur/" />
-      <meta property="og:image" content="../images/france.png"/>
+      <meta property="og:image" content="https://miktar.github.io/cv-traducteur/html/contact.html"/>
       <meta property="og:description" content="Перевод текстов любой сложности"/>
       <meta property="og:site_name" content="Услуги переводчика французского языка, 10 лет живу во Франции"/>
       <title>Переводчик французского</title>
@@ -13,6 +13,7 @@
       <link rel="icon" href="../images/france.png">
    </head>
    <body>
+   <!-- <img src='images/france.png'/>-->
       <div class="container">
          <div class="up-header">
             <ul>
