--- a/cv-traducteur/index.html
+++ b/cv-traducteur/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta property="og:title" content="Перекладач французскої"/>
-      <meta property="og:type" content="article" />
+      <meta property="og:type" content="website" />
       <meta property="og:url" content="https://miktar.github.io/cv-traducteur/" />
       <meta property="og:image" content="https://regnum.ru/uploads/pictures/news/2016/05/30/regnum_picture_1464609980585765_normal.jpg"/>
       <meta property="og:description" content="Переклад текстів будь-якої складності"/>
