--- a/cv-traducteur/html/contact-fr.html
+++ b/cv-traducteur/html/contact-fr.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta property="og:title" content="Traducteur français"/>
-      <meta property="og:type" content="article" />
+      <meta property="og:type" content="website" />
       <meta property="og:url" content="https://miktar.github.io/cv-traducteur/" />
       <meta property="og:image" content="https://miktar.github.io/cv-traducteur/html/contact.html"/>
       <meta property="og:description" content="Traduction de textes de toute complexité"/>
