--- a/cv-traducteur/html/contact.html
+++ b/cv-traducteur/html/contact.html
@@ -38,7 +38,7 @@
                <div>Херсон, готовий до переїзду в Київ,<br> Одесу, Дніпро, Запоріжжя</div>
                <div><span class="contact-info-color">Email: </span> <a href="mailto:taranenko.mykhailo@gmail.com">taranenko.mykhailo@gmail.com</a> </div>
                <div><span class="contact-info-color">Тел: </span> <a href="tel:+380994302093">(+380)99 430 20 93</a>  <br> <a href="tel:+380734458667">(+380)73 445 86 67(Viber)</a> </div>
-               <div><a href="https://www.linkedin.com/"><img  id="link-linkedin" src="../images/linkedin.png" alt="linkedin"></a> <a href="https://twitter.com/Mike67553859"><img id="link-twitter" src="../images/twitter.png" alt="twitter"></a></div>
+               <div><a href="https://www.linkedin.com/in/mykhailo-taranenko-068410205/"><img  id="link-linkedin" src="../images/linkedin.png" alt="linkedin"></a> <a href="https://twitter.com/Mike67553859"><img id="link-twitter" src="../images/twitter.png" alt="twitter"></a></div>
             </div>
             <div class="contact-form">
                <div>Напишіть мені, буду рад співпраці:</div>
