--- a/cv-traducteur/html/index-fr.html
+++ b/cv-traducteur/html/index-fr.html
@@ -56,7 +56,7 @@
                <div class="intro-info-main">Email:</div>
                <div class="intro-info-text"><a href="mailto:taranenko.mykhailo@gmail.com">taranenko.mykhailo@gmail.com</a> </div>
                <div class="intro-info-main">Réseaux sociaux:</div>
-               <div class="link-images"><a href="https://www.linkedin.com/" target="_blank"><img  id="link-linkedin" src="../images/linkedin.png" alt="linkedin"></a> <a href="https://twitter.com/Mike67553859" target="_blank"><img id="link-twitter" src="../images/twitter.png" alt="twitter"></a>
+               <div class="link-images"><a href="https://www.linkedin.com/in/mykhailo-taranenko-068410205/" target="_blank"><img  id="link-linkedin" src="../images/linkedin.png" alt="linkedin"></a> <a href="https://twitter.com/Mike67553859" target="_blank"><img id="link-twitter" src="../images/twitter.png" alt="twitter"></a>
                </div>
             </div>
          </div>
