--- a/cv-traducteur/html/contact-rus.html
+++ b/cv-traducteur/html/contact-rus.html
@@ -42,7 +42,7 @@
             </div>
             <div class="contact-form">
                <div>Напишите мне, буду рад сотрудничеству:</div>
-               <form action="" method="post">
+               <form action="https://formspree.io/f/mwkwyjrz" method="post">
                   <label for="name-contact"></label>
                   <input type="text"   id="name-contact" name = 'name-contact'  maxlength="50" value="" placeholder="Введите Ваше имя/фамилию" required> <br><br>
                   <label for="contact"></label>
