--- a/cv-traducteur/html/contact.html
+++ b/cv-traducteur/html/contact.html
@@ -42,7 +42,7 @@
             </div>
             <div class="contact-form">
                <div>Напишіть мені, буду рад співпраці:</div>
-               <form action="" method="post">
+               <form action="https://formspree.io/f/mwkwyjrz" method="post">
                   <label for="name-contact"></label>
                   <input type="text"   id="name-contact" name = 'name-contact'  maxlength="50" value="" placeholder="Введіть Ваше ім'я / прізвище" required> <br><br>
                   <label for="contact"></label>
