update form lang

--- a/cv-traducteur/html/contact-rus.html
+++ b/cv-traducteur/html/contact-rus.html
@@ -49,7 +49,7 @@
                   <input type="text"  id="contact" name = 'mail-or-tel-contact'  maxlength="50" value="" placeholder="Введите ваш номер телефона и/или email" required> <br><br>
                   <label for="comment"></label>
                   <textarea  style="font-family: Arial,sans-serif " id="comment" name="comment" cols="15" rows="10" placeholder="Комментарий" required></textarea> <br><br>
-                  <input type="hidden" name="_language" value="fr" />
+                  <input type="hidden" name="_language" value="rus" />
                   <input id="submit" type="submit" name="submit" value="Отправить">
                </form>
             </div>
