--- a/cv-traducteur/html/contact.html
+++ b/cv-traducteur/html/contact.html
@@ -49,7 +49,7 @@
                   <input type="text"  id="contact" name = 'mail-or-tel-contact'  maxlength="50" value="" placeholder="Введіть ваш номер телефону та / або email" required> <br><br>
                   <label for="comment"></label>
                   <textarea  style="font-family: Arial,sans-serif " id="comment" name="comment" cols="15" rows="10" placeholder="Коментарiй" required></textarea> <br><br>
-                  <input type="hidden" name="_language" value="fr" />
+                  <input type="hidden" name="_language" value="uk" />
                   <input id="submit" type="submit" name="submit" value="Відправити">
                </form>
             </div>
