--- a/cv-traducteur/html/index-rus.html
+++ b/cv-traducteur/html/index-rus.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
    <head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BE147VPH4K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BE147VPH4K');
+</script>
       <meta charset="utf-8">
       <meta property="og:title" content="Переводчик французского"/>
       <meta property="og:type" content="website" />
