--- a/construction-companie-site/index.html
+++ b/construction-companie-site/index.html
@@ -6,10 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/index.css">
-  <title>Document</title>
-
-  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <title>&#34;Мастер&#34;</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+ 
+      <meta property="og:title" content="Стройфирма Мастер"/>
+      <meta property="og:type" content="website" />
+      <meta property="og:url" content="https://miktar.github.io/consctruction-companie-site/" />
+      <meta property="og:image" content="https://luxfon.com/images/201203/luxfon.com_3496.jpg"/>
+      <meta property="og:description" content="ЛИДЕРЫ В ОБЛАСТИ КАЧЕСТВЕННОГО СТРОИТЕЛЬСТВА"/>
+      <meta property="og:site_name" content="Профессионалы"/>
+      
+      <link rel="icon" href="images/1.jpg">
 </head>
 
 <body>
