--- a/construction-companie-site/index.html
+++ b/construction-companie-site/index.html
@@ -20,6 +20,12 @@
 </head>
 
 <body>
+  <div class="preloader">
+    <div class="preloader__row">
+      <div class="preloader__item"></div>
+      <div class="preloader__item"></div>
+    </div>
+  </div>
   <div class="up-header"></div>
   <header>
 
@@ -53,23 +59,20 @@
         <div>
           <h3>
             Планирование<br> строительства</h3>
-          <p>Это текст. Нажмите один раз и выберите «Редактировать текст» или просто дважды кликните, чтобы добавить
-            свой текст и настроить шрифт.</p>
+          <p>Таким образом реализация намеченных плановых заданий влечет за собой процесс внедрения и модернизации направлений прогрессивного развития.</p>
         </div>
       </div>
       <div><img src="images/2.jpg" alt="1">
         <div>
           <h3>
             Архитектурное<br> моделирование</h3>
-          <p>Это текст. Нажмите один раз и выберите «Редактировать текст» или просто дважды кликните, чтобы добавить
-            свой текст и настроить шрифт.</p>
+          <p>Таким образом реализация намеченных плановых заданий влечет за собой процесс внедрения и модернизации направлений прогрессивного развития.</p>
         </div>
       </div>
       <div><img src="images/3.jpg" alt="1">
         <div>
           <h3>Управление <br> строительством</h3>
-          <p>Это текст. Нажмите один раз и выберите «Редактировать текст» или просто дважды кликните, чтобы добавить
-            свой текст и настроить шрифт.</p>
+          <p>Таким образом реализация намеченных плановых заданий влечет за собой процесс внедрения и модернизации направлений прогрессивного развития.</p>
         </div>
       </div>
     </section>
@@ -77,11 +80,13 @@
 
       <div>
         <h4>О нас</h4>
-        <p>Это текст. Нажмите один раз и выберите «Редактировать текст» или просто кликните дважды, чтобы добавить свой
-          текст и настроить шрифт. Вы можете переместить его в любое место на странице. Расскажите посетителям сайта о
-          себе. Здесь будет удачно смотреться текст о вашей компании и услугах. Используйте эту возможность, чтобы
-          выгодно представить себя и свою компанию клиентам. Расскажите интересную историю, например, как вам в голову
-          пришла идея собственного дела, и объясните, в чем заключается ваше преимущество перед конкурентами.</p>
+        <p>Задача организации, в особенности же постоянный количественный рост и сфера нашей активности 
+          представляет собой интересный эксперимент проверки системы обучения кадров, соответствует насущным 
+          потребностям. Разнообразный и богатый опыт укрепление и развитие структуры требуют определения и уточнения
+           форм развития. Таким образом реализация намеченных плановых заданий влечет за собой процесс внедрения и 
+           модернизации направлений прогрессивного развития. Значимость этих проблем настолько очевидна, что дальнейшее 
+           развитие различных форм деятельности влечет за собой процесс внедрения и модернизации соответствующий условий 
+           активизации. </p>
       </div>
       <div></div>
     </section>
@@ -105,10 +110,10 @@
     </section>
     <section id="projects" class="projects">
       <h4>Проекты</h4>
-      <div><a href="" target="blank">Проект 1</a></div>
-      <div><a href="" target="blank">Проект 2</a></div>
-      <div><a href="" target="blank">Проект 3</a></div>
-      <div><a href="" target="blank">Проект 4</a></div>
+      <div> <p>Кликните для доп. информации</p> <a href="" target="blank">Проект 1</a></div>
+      <div><p>Кликните для доп. информации</p><a href="" target="blank">Проект 2</a></div>
+      <div><p>Кликните для доп. информации</p><a href="" target="blank">Проект 3</a></div>
+      <div><p>Кликните для доп. информации</p><a href="" target="blank">Проект 4</a></div>
     </section>
     <section id="contact" class="contact-name">
       <h4>Контакты</h4>
@@ -166,6 +171,15 @@
         href="linkedin.com" target="blank"><img src="images/l-link.jpg" alt="linkedin"></a>
     </footer>
   </main>
+  <script>
+    window.onload = function () {
+      document.body.classList.add('loaded_hiding');
+      window.setTimeout(function () {
+        document.body.classList.add('loaded');
+        document.body.classList.remove('loaded_hiding');
+      }, 500);
+    }
+  </script>
 </body>
 
 </html>
