--- a/construction-companie-site/index.html
+++ b/construction-companie-site/index.html
@@ -59,20 +59,20 @@
         <div>
           <h3>
             Планирование<br> строительства</h3>
-          <p>Таким образом реализация намеченных плановых заданий влечет за собой процесс внедрения и модернизации направлений прогрессивного развития.</p>
+          <p>Таким образом реализация намеченных плановых заданий влечет за собой процесс внедрения и т.д.</p>
         </div>
       </div>
       <div><img src="images/2.jpg" alt="1">
         <div>
           <h3>
             Архитектурное<br> моделирование</h3>
-          <p>Таким образом реализация намеченных плановых заданий влечет за собой процесс внедрения и модернизации направлений прогрессивного развития.</p>
+          <p>Таким образом реализация намеченных плановых заданий влечет за собой процесс внедрения и т.д.</p>
         </div>
       </div>
       <div><img src="images/3.jpg" alt="1">
         <div>
           <h3>Управление <br> строительством</h3>
-          <p>Таким образом реализация намеченных плановых заданий влечет за собой процесс внедрения и модернизации направлений прогрессивного развития.</p>
+          <p>Таким образом реализация намеченных плановых заданий влечет за собой процесс внедрения и т.д.</p>
         </div>
       </div>
     </section>
@@ -110,10 +110,10 @@
     </section>
     <section id="projects" class="projects">
       <h4>Проекты</h4>
-      <div> <p>Кликните для доп. информации</p> <a href="" target="blank">Проект 1</a></div>
-      <div><p>Кликните для доп. информации</p><a href="" target="blank">Проект 2</a></div>
-      <div><p>Кликните для доп. информации</p><a href="" target="blank">Проект 3</a></div>
-      <div><p>Кликните для доп. информации</p><a href="" target="blank">Проект 4</a></div>
+      <div><p class="mobile-projects-link">Кликните для доп. информации</p> <a href="" target="blank">Проект 1</a></div>
+      <div><p class="mobile-projects-link"> Кликните для доп. информации</p><a href="" target="blank">Проект 2</a></div>
+      <div><p class="mobile-projects-link">Кликните для доп. информации</p><a href="" target="blank">Проект 3</a></div>
+      <div><p class="mobile-projects-link">Кликните для доп. информации</p><a href="" target="blank">Проект 4</a></div>
     </section>
     <section id="contact" class="contact-name">
       <h4>Контакты</h4>
