--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -39,11 +39,11 @@
 
     @media screen and (max-width: 1030px) {
       .carousel {
-        height: 1000px;
+        height: 50vh;
       }
 
       .carousel img {
-        height: 1000px;
+        height: 50vh;
       }
     }
   </style>
