added about us section for lawer website

--- a/law-firm-website/index.html
+++ b/law-firm-website/index.html
@@ -10,7 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
 
     <title>Document</title>
 </head>
@@ -47,7 +48,8 @@
                     <div class="sectors-section">
                         <span class="material-icons">
                             bookmark
-                            </span><h2>БАНКРОТСТВО</h2>
+                        </span>
+                        <h2>БАНКРОТСТВО</h2>
                         <p>Это текст. Кликните дважды, чтобы отредактировать.</p>
                     </div>
                 </div>
@@ -55,26 +57,40 @@
                     <div class="sectors-section">
                         <span class="material-icons">
                             bookmark
-                            </span><h2>МОШЕННИЧЕСТВО</h2>
+                        </span>
+                        <h2>МОШЕННИЧЕСТВО</h2>
                         <p>Это текст. Кликните дважды, чтобы отредактировать.</p>
                     </div>
                     <div class="sectors-section">
                         <span class="material-icons">
                             bookmark
-                            </span><h2>РАЗРЕШЕНИЕ СПОРОВ</h2>
+                        </span>
+                        <h2>РАЗРЕШЕНИЕ СПОРОВ</h2>
                         <p>Это текст. Кликните дважды, чтобы отредактировать.</p>
                     </div>
                     <div class="sectors-section">
                         <span class="material-icons">
                             bookmark
-                            </span><h2>НАЛОГИ</h2>
+                        </span>
+                        <h2>НАЛОГИ</h2>
                         <p>Это текст. Кликните дважды, чтобы отредактировать.</p>
                     </div>
                 </div>
 
             </div>
         </section>
-        <section class="about-us"></section>
+        <section class="about-us">
+            <h3>О нас</h3>
+            <p>Это текст. Нажмите один раз и выберите «Редактировать текст» или просто кликните дважды, чтобы добавить
+                свой текст и настроить шрифт. Вы можете переместить его в любое место на странице. Расскажите
+                посетителям сайта о себе. Здесь будет удачно смотреться текст о вашей компании и услугах.</p>
+            <p>Расскажите интересную историю, например, как вам в голову пришла идея собственного дела, и объясните, в
+                чем заключается ваше преимущество перед конкурентами. Приводите увлекательные факты и цифры — пусть вас
+                запомнят. Не забудьте про ключевые слова, по которым ваш сайт найдут в поисковых системах.</p>
+            <p>Наши шаблоны позволяют создавать отличные сайты. Мы благодарим вас за поддержку, отзывы и предложения,
+                которые помогают делать конструктор сайтов Wix еще лучше. Заходите на наш форум, делитесь своим мнением
+                и задавайте вопросы.</p>
+        </section>
         <section class="secondary-image"></section>
         <section class="our-lawyers"></section>
         <section class="contact"></section>
