added images and abous us section

--- a/law-firm-website/index.html
+++ b/law-firm-website/index.html
@@ -92,7 +92,36 @@
                 и задавайте вопросы.</p>
         </section>
         <section class="secondary-image"></section>
-        <section class="our-lawyers"></section>
+        <section class="our-lawyers">
+            <h4> Наши юристы</h4>
+
+            <div class="lawyer"> <img src="images/3.jpg" alt="first"> 
+                <p class="lawyer-name">СЕРГЕЙ САНИН</p>
+                <p class="lawyer-fonction">ПАРТНЕР</p>
+                <hr>
+                <p class="lawyer-tel">Тел. +7 (495) 000-00-00</p>
+                <p class="lawyer-email">info@mysite.ru</p>
+            </div>
+
+
+            <div class="lawyer"> <img src="images/4.jpg" alt="second">
+                <p class="lawyer-name">МАРИЯ КОТИНА</p>
+                <p class="lawyer-fonction">ПАРТНЕР</p>
+                <hr>
+                <p class="lawyer-tel">Тел. +7 (495) 000-00-00</p>
+                <p class="lawyer-email">info@mysite.ru</p>
+            </div>
+
+            <div class="lawyer"> <img src="images/5.jpg" alt="third">
+                <p class="lawyer-name">ПАВЕЛ СЕРГЕЕВ</p>
+                <p class="lawyer-fonction">ПАРТНЕР</p>
+                <hr>
+                <p class="lawyer-tel">Тел. +7 (495) 000-00-00</p>
+                <p class="lawyer-email">info@mysite.ru</p>
+            </div>
+
+
+        </section>
         <section class="contact"></section>
         <section class="to-up"></section>
     </main>
