changed about us section

--- a/law-firm-website/index.html
+++ b/law-firm-website/index.html
@@ -99,8 +99,8 @@
                 <p class="lawyer-name">СЕРГЕЙ САНИН</p>
                 <p class="lawyer-fonction">ПАРТНЕР</p>
                 <hr>
-                <p class="lawyer-tel">Тел. +7 (495) 000-00-00</p>
-                <p class="lawyer-email">info@mysite.ru</p>
+                <p class="lawyer-tel">Тел. <a href="tel:+74950000000"> +7 (495) 000-00-00</a></p>
+                <p class="lawyer-email"> <a href="mailto:info@mysite.ru">info@mysite.ru</a> </p>
             </div>
 
 
@@ -108,21 +108,24 @@
                 <p class="lawyer-name">МАРИЯ КОТИНА</p>
                 <p class="lawyer-fonction">ПАРТНЕР</p>
                 <hr>
-                <p class="lawyer-tel">Тел. +7 (495) 000-00-00</p>
-                <p class="lawyer-email">info@mysite.ru</p>
+                <p class="lawyer-tel">Тел. <a href="tel:+74950000000"> +7 (495) 000-00-00</a></p>
+                <p class="lawyer-email"> <a href="mailto:info@mysite.ru">info@mysite.ru</a> </p>
             </div>
 
             <div class="lawyer"> <img src="images/5.jpg" alt="third">
                 <p class="lawyer-name">ПАВЕЛ СЕРГЕЕВ</p>
                 <p class="lawyer-fonction">ПАРТНЕР</p>
                 <hr>
-                <p class="lawyer-tel">Тел. +7 (495) 000-00-00</p>
-                <p class="lawyer-email">info@mysite.ru</p>
+                <p class="lawyer-tel">Тел. <a href="tel:+74950000000"> +7 (495) 000-00-00</a></p>
+                <p class="lawyer-email"> <a href="mailto:info@mysite.ru">info@mysite.ru</a> </p>
             </div>
 
 
         </section>
-        <section class="contact"></section>
+        <section class="contact"> 
+            <div class="background-one"><div class="background-two"> <p>Свяжитесь <br> с нами</p> </div></div>
+            
+        </section>
         <section class="to-up"></section>
     </main>
     <footer></footer>
