--- a/law-firm-website/index.html
+++ b/law-firm-website/index.html
@@ -17,7 +17,23 @@
 </head>
 
 <body>
-    <header ></header>
+    <header >
+         <div class="header-name">  <a href="index.html"> <i class="fas fa-layer-group"></i> Юридическая компания</a>  </div> 
+         <nav> 
+             <a href="#color-name"> <i class="fas fa-home"></i>ГЛАВНАЯ</a> 
+              <a href="#sectors"> <i class="fas fa-clone"></i>СФЕРЫ РАБОТЫ</a>   
+             <a href="#about-us"> <i class="fas fa-align-center"></i> О НАС</a> 
+             <a href="#our-lawyers"> <i class="fas fa-address-card"></i>ЮРИСТЫ</a> 
+              <a href="#contact"> <i class="fas fa-phone-square-alt"></i>КОНТАКТЫ</a> 
+             <!-- <ul>
+                 <li> <a href="#color-name">ГЛАВНАЯ</a> </li>
+                 <li>  <a href="#sectors">СФЕРЫ РАБОТЫ</a>   </li>
+                 <li> <a href="#about-us">О НАС</a> </li>
+                 <li> <a href="#our-lawyers">ЮРИСТЫ</a> </li>
+                 <li>  <a href="#contact">КОНТАКТЫ</a> </li>
+             </ul> -->
+          <nav>  
+</header>
     <main>
         <section class="main-image">
             <div id="color-name" class="color-name">
@@ -26,7 +42,7 @@
             </div>
             <div class="main-transparent"></div>
         </section>
-        <section class="sectors">
+        <section class="sectors" id="sectors">
             <div class="sectors-heading">
                 <p>Сферы <br> работы</p>
             </div>
@@ -80,7 +96,7 @@
 
             </div>
         </section>
-        <section class="about-us">
+        <section class="about-us" id="about-us">
             <h3>О нас</h3>
             <p>Это текст. Нажмите один раз и выберите «Редактировать текст» или просто кликните дважды, чтобы добавить
                 свой текст и настроить шрифт. Вы можете переместить его в любое место на странице. Расскажите
@@ -93,7 +109,7 @@
                 и задавайте вопросы.</p>
         </section>
         <section class="secondary-image"></section>
-        <section class="our-lawyers">
+        <section class="our-lawyers" id="our-lawyers">
             <h4> Наши юристы</h4>
 
             <div class="lawyer"> <img src="images/3.jpg" alt="first"> 
@@ -123,7 +139,7 @@
 
 
         </section>
-        <section class="contact"> 
+        <section class="contact" id="contact"> 
             <div class="background-one"><div class="background-two"> <p>Свяжитесь <br> с нами</p> </div>
         <div class="background-text"><p class="adress-heading">НАШ АДРЕС</p>
         <p class="adress">
@@ -162,7 +178,7 @@
         </section>
     </main>
     <footer>
-        <p>© 2023 Санин и партнеры. </p>
+        <p>© 2023 Санин и партнеры </p>
          <a href="https://vk.com/"><i class="fab fa-vk"></i></a>  
          <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>  
         <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>  
