changes links mail and tel for contact and main page

--- a/Cv-elec/index.html
+++ b/Cv-elec/index.html
@@ -40,8 +40,8 @@
         <span id="intro-link-cv-text"> <a href="html/cv.html" target="_self"> Mon CV</a></span>
         <div id="intro-right-bar">
             <div class="intro-right-bar-main"> Secteurs d'activité:</div>  <div class="intro-right-bar-normal-text"> Électricité générale <br>Électricité tertiaire <br>Électricité domestique <br> Câblage d'armoires</div>
-            <div class="intro-right-bar-main">Mon numéro:</div><div class="intro-right-bar-normal-text">07 53 51 52 21</div>
-            <div class="intro-right-bar-main">Mon e-mail:</div> <div class="intro-right-bar-normal-text">mikael.tar@outlook.com</div>
+            <div class="intro-right-bar-main">Mon numéro:</div><div class="intro-right-bar-normal-text"><a href="tel:+33753515221">07 53 51 52 21</a></div>
+            <div class="intro-right-bar-main">Mon e-mail:</div> <div class="intro-right-bar-normal-text"><a href="mailto:mikael.tar@outlook.com">mikael.tar@outlook.com</a></div>
             <div class="intro-right-bar-main">Réseaux sociaux:</div>
         </div>
         <div id="intro-img-links">
