--- a/Cv-elec/html/contact.html
+++ b/Cv-elec/html/contact.html
@@ -32,7 +32,7 @@
     <div id="contact-text">Contacts</div>
     <div id="name-text">Mykhailo Taranenko</div>
     <div id="adress-text">2 rue Charles de Foucauld, 37200, Tours</div>
-    <div id="mail-tel-text"> E-mail: mikael.tar@outlook.com Tel: 07 53 51 52 21</div>
+    <div id="mail-tel-text"> E-mail: <a href="mailto:mikael.tar@outlook.com">mikael.tar@outlook.com</a> Tel: <a href="tel:+33753515221">07 53 51 52 21</a></div>
     <div id="images-text">
     <a href="https://www.linkedin.com/in/mikaeltar/"> <img id="contact-img-linkedin" src="../images/linkedin.png" alt="linkedin"> </a>
         <a href="https://twitter.com/Mike67553859"> <img id="contact-img-twitter" src="../images/twitter.png" alt="twitter">   </a>
@@ -43,7 +43,16 @@
 <section>
     <div id="form"><div id="me-contacter">Me contacter:</div>
     <div id="form-form">
-        
+        <form action="https://formspree.io/f/xyybbvww" method="post">
+            <label for="name-contact"></label>
+            <input type="text"   id="name-contact" name = 'name-contact'  maxlength="50" value="" placeholder="Entrez votre nom/prénom" required> <br><br>
+            <label for="contact"></label>
+            <input type="text"  id="contact" name = 'mail-or-tel-contact'  maxlength="50" value="" placeholder="Entrez votre numéro de tel. ou e-mail" required> <br><br>
+             <label for="comment"></label>
+            <textarea  id="comment" name="comment" cols="15" rows="10" placeholder="Commentaire:" required></textarea> <br><br>
+         <input type="hidden" name="_language" value="fr" />
+            <input id="submit" type="submit" name="submit" value="Envoyer">
+        </form>
     </div>
 
     </div>
