--- a/Cv-elec/mobile/mobile-index.html
+++ b/Cv-elec/mobile/mobile-index.html
@@ -36,8 +36,8 @@
     </div>
     <div id="mobile-secteurs-etc">
         <div class="mobile-secteurs-etc-main"> Secteurs d'activité:</div>  <div class="mobile-secteurs-etc-normal-text"> Électricité générale <br>Électricité tertiaire <br>Électricité domestique <br> Câblage d'armoires</div>
-            <div class="mobile-secteurs-etc-main">Mon numéro:</div><div class="mobile-secteurs-etc-normal-text">07 53 51 52 21</div>
-            <div class="mobile-secteurs-etc-main">Mon e-mail:</div> <div class="mobile-secteurs-etc-normal-text">mikael.tar@outlook.com</div>
+            <div class="mobile-secteurs-etc-main">Mon numéro:</div><div class="mobile-secteurs-etc-normal-text"><a href="tel:+33753515221">07 53 51 52 21</a></div>
+            <div class="mobile-secteurs-etc-main">Mon e-mail:</div> <div class="mobile-secteurs-etc-normal-text"><a href="mailto:mikael.tar@outlook.com">mikael.tar@outlook.com</a></div>
             <div class="mobile-secteurs-etc-main">Réseaux sociaux:</div>
         <div id="mobile-intro-img-links">
             <a href="https://www.linkedin.com/in/mikaeltar/" target="_blank"><img id="mobile-img-linkedin" src="../images/linkedin.png" alt="linkedin"></a>
