--- a/Cv-elec/mobile/mobile.contact.html
+++ b/Cv-elec/mobile/mobile.contact.html
@@ -26,7 +26,7 @@
 <div id="mobile-contacts-main">Contacts</div>
         <div id="mobile-cv-contacts-name-surname">Mykhailo Taranenko</div>
         <div id="mobile-cv-contacts-adress"> 2 rue Charles de Foucauld, <br> 37200, Tours</div>
-        <div id="mobile-cv-contacts-mail-text">E-mail: mikael.tar@outlook.com <br>Tel: 07 53 51 52 21</div>
+        <div id="mobile-cv-contacts-mail-text"> E-mail: <a href="mailto:mikael.tar@outlook.com">mikael.tar@outlook.com</a> <br> Tel: <a href="tel:+33753515221">07 53 51 52 21</a></div>
         <div id="mobile-contacts-images-links">
             <a href="https://www.linkedin.com/in/mikaeltar/"> <img id="mobile-img-linkedin" src="../images/linkedin.png" alt="linkedin"> </a>
             <a href="https://twitter.com/Mike67553859"> <img id="mobile-img-twitter" src="../images/twitter.png" alt="twitter">   </a>
