--- a/ToDo-List-js/index.html
+++ b/ToDo-List-js/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header> <h1>Todo List</h1> </header>
+    <main>  
+        <ul>
+            <li>"new" - Add A Todo</li>
+            <li>"list" - List All Todos</li>
+            <li>"delete" - Remove Specific Todo</li>
+            <li>"quit" - Quit App</li>
+        </ul>
+    </main>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
