--- a/auto-repair-shop-website/index.html
+++ b/auto-repair-shop-website/index.html
@@ -17,6 +17,11 @@
        <h2>Диагностика ходовой части</h2>
         <h3>Бесплатно! </h3>
         <button>Записаться!</button>
+        <div class='at-container'>
+            <div class='at-item' >
+            </div>
+          </div>
+          
    </section>
 </main>
     <footer></footer>
