--- a/auto-repair-shop-website/index.html
+++ b/auto-repair-shop-website/index.html
@@ -42,21 +42,21 @@
     </div>
     <hr id="second-hr">
     <div id="div-hours">
-        <span class="hour">8:00</span>
-        <span class="hour">8:30</span>
-        <span class="hour">9:00</span>
-        <span class="hour">9:30</span>
-        <span class="hour">10:00</span>
-        <span class="hour">10:30</span>
-        <span class="hour">11:00</span>
-        <span class="hour">11:30</span>
-        <span class="hour">13:00</span>
-        <span class="hour">13:30</span>
-        <span class="hour">14:00</span>
-        <span class="hour">14:30</span>
-        <span class="hour">15:00</span>
-        <span class="hour">15:30</span>
-        <span class="hour">16:00</span>
+        <span class="hour" id="a">8:00</span>
+        <span class="hour" id="b">8:30</span>
+        <span class="hour" id="c">9:00</span>
+        <span class="hour" id="d">9:30</span>
+        <span class="hour" id="e">10:00</span>
+        <span class="hour" id="f">10:30</span>
+        <span class="hour" id="h">11:00</span>
+        <span class="hour" id="i">11:30</span>
+        <span class="hour" id="j">13:00</span>
+        <span class="hour" id="k">13:30</span>
+        <span class="hour" id="l">14:00</span>
+        <span class="hour" id="m">14:30</span>
+        <span class="hour" id="n">15:00</span>
+        <span class="hour" id="o">15:30</span>
+        <span class="hour" id="p">16:00</span>
     </div>
     
 
@@ -67,6 +67,19 @@
 
 
    </section>
+
+<section id="section-partenaires">
+    <h4>Другие акции BESTSERVICE</h4>
+    <div class="partenaires">
+        <div>  <h5>CONDER</h5> <h6>Бесплатная диагностика кондиционеров</h6> <p>Подробнее</p> </div>
+        <div>  <h5>KYB</h5>  <h6>Бесплатная замена амортизаторов KYB</h6>  <p>Подробнее</p> </div>
+        <div>  <h5>VESNA</h5> <h6>Бесплатная замена любых технических жидкостей  </h6> <p>Подробнее</p> </div>
+    </div>
+
+</section>
+
+
+
 </main>
     <footer></footer>
     <script src="scripts/main.js"></script>
